force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/VisMed_Contacto_Cuenta_Usuario__c.object-meta.xml
<CustomObject>
    <description>Relacion de APM con el profesional y su lugar de trabajo</description>
    <label>Fichero</label>
    <nameField>
        <displayFormat>SEG-{0000}</displayFormat>
        <label>Seguimiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ficheros</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>