force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Actualizar_Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Actualizar_Frecuencia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado por el batch : BatchSetFrecuencia. Indica si hay que actualizar la frencuencia el ciclo siguiente.</description>
    <label>Actualizar Frecuencia</label>
    <type>Checkbox</type>
</CustomField>