force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Aun_Quedan_Meses__c.field-meta.xml
<CustomField>
    <fullName>Aun_Quedan_Meses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Meses restantes de frecuencia</inlineHelpText>
    <label>Aun Quedan Meses</label>
    <type>Checkbox</type>
</CustomField>