force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>