force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Estado_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_aprobacion__c</fullName>
    <label>Estado de aprobacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>