force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Fecha_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aprobacion__c</fullName>
    <label>Fecha de Aprobación</label>
    <type>DateTime</type>
</CustomField>