force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Fecha_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud__c</fullName>
    <label>Fecha Solicitud</label>
    <type>Date</type>
</CustomField>