force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Fin_de_Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_Frecuencia__c</fullName>
    <label>Fin de Frecuencia</label>
    <type>Date</type>
</CustomField>