force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>