force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Inicio_de_Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Frecuencia__c</fullName>
    <label>Inicio de Frecuencia</label>
    <type>Date</type>
</CustomField>