force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institución</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institución, Consultorio, Farmacia, Institución</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ficheros (Institución)</relationshipLabel>
    <relationshipName>Contacto_Cuenta_Usuario</relationshipName>
    <type>Lookup</type>
</CustomField>