force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Motivo_de_la_Baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_la_Baja__c</fullName>
    <label>Motivo de la Baja</label>
    <type>TextArea</type>
</CustomField>