force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Ficheros</relationshipLabel>
    <relationshipName>Ficheros</relationshipName>
    <type>Lookup</type>
</CustomField>