force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Predeterminada__c.field-meta.xml
<CustomField>
    <fullName>Predeterminada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>