force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Segmenta_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Anterior__c</fullName>
    <label>Segmenta Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>