force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Segmenta_Por__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Por__c</fullName>
    <label>Segmenta Por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segmenta_Por</valueSetName>
    </valueSet>
</CustomField>