force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo alta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta Profesional</fullName>
            </value>
            <value>
                <fullName>Alta domicilio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>