force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Ultima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Visita__c</fullName>
    <label>Ultima Visita</label>
    <type>Date</type>
</CustomField>