force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Visitador__c.field-meta.xml
<CustomField>
    <fullName>Visitador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contacto_Cuenta_Usuario</relationshipName>
    <type>Lookup</type>
</CustomField>