force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Visitas_acumuladas__c.field-meta.xml
<CustomField>
    <fullName>Visitas_acumuladas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para acumular visitas del pasado, es decir que no son del mes actual</description>
    <label>Visitas acumuladas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>