force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Visitas_Realizadas__c.field-meta.xml
<CustomField>
    <fullName>Visitas_Realizadas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Visitas Realizadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>