force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/Visitas_Restantes__c.field-meta.xml
<CustomField>
    <fullName>Visitas_Restantes__c</fullName>
    <formula>IF(Frecuencia__c &lt; 1,
IF(Visitas_acumuladas__c &gt; 0 || Visitas_Realizadas__c &gt; 0, 0, Frecuencia__c),
IF(Frecuencia__c - Visitas_Realizadas__c &gt; 0, Frecuencia__c - Visitas_Realizadas__c, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitas Restantes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>