force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/fields/VisMed_Semaforo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Semaforo__c</fullName>
    <label>Semaforo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>