force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VisMed_APM__c</columns>
    <columns>Institucion__c</columns>
    <columns>Profesional__c</columns>
    <columns>Predeterminada__c</columns>
    <columns>Estado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tipo__c</columns>
    <columns>Categoria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>