force-app/main/default/objects/VisMed_Contacto_Cuenta_Usuario__c/listViews/Fichero.listView-meta.xml
<ListView>
    <fullName>Fichero</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>VisMed_APM__c</columns>
    <columns>Profesional__c</columns>
    <columns>Institucion__c</columns>
    <columns>Segmenta_Por__c</columns>
    <columns>Categoria__c</columns>
    <columns>Frecuencia__c</columns>
    <columns>Estado__c</columns>
    <columns>Predeterminada__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Activo</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Baja Temporal</value>
    </filters>
    <filters>
        <field>Predeterminada__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Fichero</label>
</ListView>